Fix some spacing and offsets

--- a/src/components/UI/Page.scss
+++ b/src/components/UI/Page.scss
@@ -4,17 +4,18 @@
   display: block;
 
   &.offset-from-top {
-    padding-top: 120px;
+    padding-top: 130px;
 
     @media only screen and (min-width: 800px) {
-      padding-top: 190px;
+      padding-top: 140px;
     }
   }
 
   .wrapper {
+    padding: 20px 50px;
+
     @media only screen and (min-width: 800px) {
       margin: 0 auto;
-      padding: 20px;
       max-width: 980px;
       background-color: white;
       box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.2);
